@@ -2,27 +2,20 @@ package edu.pnu.service.member;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 
-import edu.pnu.domain.Goods;
 import edu.pnu.domain.Member;
 import edu.pnu.domain.SearchHistory;
-import edu.pnu.dto.filter.SearchFilterDTO;
-import edu.pnu.dto.goods.GoodsDTO;
 import edu.pnu.persistence.GoodsRepository;
 import edu.pnu.persistence.SearchHistoryRepository;
-import edu.pnu.specification.CategorySpecification;
 import lombok.RequiredArgsConstructor;
 
 @Service
 @RequiredArgsConstructor
 public class SearchHistoryService {
 	
-	private SearchHistoryRepository searchHistoryRepo; 
-	private GoodsRepository goodsRepo;
+	private final SearchHistoryRepository searchHistoryRepo; 
 	
 	
 	public void saveSearchKeyword(String keyword, Member member) {
@@ -35,16 +28,15 @@ public class SearchHistoryService {
 	            .build();
 
 	    searchHistoryRepo.save(newKeyword);
+	    System.out.println("[회원 검색어 저장 완료]");
 
 	    // 2. 최근 5개 검색어만 유지
 	    List<SearchHistory> recent = searchHistoryRepo
 	        .findTop5ByMemberOrderBySearchedAtDesc(member);
 
-	    List<Long> keepIds = recent.stream()
-	    	    .map(searchHistory -> searchHistory.getId())
-	    	    .collect(Collectors.toList());
-
-	    searchHistoryRepo.deleteByMemberAndIdNotIn(member, keepIds);
+	    List<Long> seqs = recent.stream().map(SearchHistory::getSeq).toList();
+        searchHistoryRepo.deleteByMemberAndSeqNotIn(member, seqs);
+        System.out.println("[비회원 검색어 삭제 완료]");
 	}
 	
 	
